# AegisAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  launch.ps1  make_icon.py  package-lock.json  package.json  requirements.txt  run.ps1  setup.ps1
aegis_core/: config.py  guardrails.py  patch_engine.py  scanner.py  tools.py  tools_registry.py
evals/: runner.py  tasks.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
static/: index.html
