[package]
name = "aegis-ai"
version = "1.2.2"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aegis_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
